{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 487,
  "lineage": "1fad4012-fbea-ba0f-5603-5eed8fbcc669",
  "resources": [
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "nodeapp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:loadbalancer/app/nodeapp-lb/1b4abf6ab41f3701",
            "arn_suffix": "app/nodeapp-lb/1b4abf6ab41f3701",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "nodeapp-lb-756681778.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:loadbalancer/app/nodeapp-lb/1b4abf6ab41f3701",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nodeapp-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07999d008b4e6880a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0445b20d458057697"
              },
              {
                "subnet_id": "subnet-0ba49c78b9679ebb0"
              }
            ],
            "subnets": [
              "subnet-0445b20d458057697",
              "subnet-0ba49c78b9679ebb0"
            ],
            "vpc_id": "vpc-07715e836d8ba496b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.security_group.aws_security_group.ecs_security_group",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:listener/app/nodeapp-lb/1b4abf6ab41f3701/53b8f8bbb41e0353",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:targetgroup/nodeapp-tg/f00f575b4c4b67fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:listener/app/nodeapp-lb/1b4abf6ab41f3701/53b8f8bbb41e0353",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:loadbalancer/app/nodeapp-lb/1b4abf6ab41f3701",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.nodeapp_lb",
            "module.load_balancer.aws_lb_target_group.nodeapp_tg",
            "module.security_group.aws_security_group.ecs_security_group",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nodeapp_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:targetgroup/nodeapp-tg/f00f575b4c4b67fd",
            "arn_suffix": "targetgroup/nodeapp-tg/f00f575b4c4b67fd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:850286438394:targetgroup/nodeapp-tg/f00f575b4c4b67fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nodeapp-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:security-group/sg-07999d008b4e6880a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07999d008b4e6880a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "terraform-20240629181418443900000004",
            "name_prefix": "terraform-",
            "owner_id": "850286438394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:security-group/sg-0e6af48cac177055e",
            "description": "Allow MySQL traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e6af48cac177055e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_sg",
            "name_prefix": "",
            "owner_id": "850286438394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "id": "igw-099306eb97482f447",
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-0d2c32868dc629727",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "r-rtb-0085e349c05dfc2c71080289494",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_eip.nat",
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_nat_gateway.this",
            "module.vpc.module.natsvpc.aws_route.private_nat_gateway",
            "module.vpc.module.natsvpc.aws_route_table.private",
            "module.vpc.module.natsvpc.aws_subnet.private",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "arn": null,
            "id": "rtb-036cdbe708de65514",
            "owner_id": null,
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "r-rtb-0085e349c05dfc2c71080289494",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_eip.nat",
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_nat_gateway.this",
            "module.vpc.module.natsvpc.aws_route.private_nat_gateway",
            "module.vpc.module.natsvpc.aws_route_table.private",
            "module.vpc.module.natsvpc.aws_subnet.private",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:network-acl/acl-0696f6849fb2e33d8",
            "default_network_acl_id": "acl-0696f6849fb2e33d8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0696f6849fb2e33d8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "850286438394",
            "subnet_ids": [
              "subnet-02e2df5571c0df3ac",
              "subnet-0445b20d458057697",
              "subnet-0506654fc53e4d91c",
              "subnet-0ba49c78b9679ebb0"
            ],
            "tags": {
              "Name": "natsvpc-default"
            },
            "tags_all": {
              "Name": "natsvpc-default"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:route-table/rtb-0ddeb68feebc460e2",
            "default_route_table_id": "rtb-0ddeb68feebc460e2",
            "id": "rtb-0ddeb68feebc460e2",
            "owner_id": "850286438394",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "natsvpc-default"
            },
            "tags_all": {
              "Name": "natsvpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:security-group/sg-003b3e63652324a98",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-003b3e63652324a98",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "850286438394",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "natsvpc-default"
            },
            "tags_all": {
              "Name": "natsvpc-default"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fcc1d44f2a570da",
            "arn": "arn:aws:ec2:eu-central-1:850286438394:elastic-ip/eipalloc-07fcc1d44f2a570da",
            "domain": "vpc",
            "id": "eipalloc-07fcc1d44f2a570da",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-123-101-147.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.101.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "natsvpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "natsvpc-eu-central-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:internet-gateway/igw-0635d78540af70601",
            "id": "igw-0635d78540af70601",
            "owner_id": "850286438394",
            "tags": {
              "Name": "natsvpc"
            },
            "tags_all": {
              "Name": "natsvpc"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07fcc1d44f2a570da",
            "association_id": "eipassoc-042f5d725abb1beef",
            "connectivity_type": "public",
            "id": "nat-0cdd2e9f2e14948da",
            "network_interface_id": "eni-0dde4609109127c26",
            "private_ip": "10.0.1.107",
            "public_ip": "3.123.101.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0445b20d458057697",
            "tags": {
              "Name": "natsvpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "natsvpc-eu-central-1a"
            }
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_eip.nat",
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0085e349c05dfc2c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cdd2e9f2e14948da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0085e349c05dfc2c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_eip.nat",
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_nat_gateway.this",
            "module.vpc.module.natsvpc.aws_route_table.private",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0635d78540af70601",
            "id": "r-rtb-08ea1f4239266da561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08ea1f4239266da56",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_internet_gateway.this",
            "module.vpc.module.natsvpc.aws_route_table.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:route-table/rtb-0085e349c05dfc2c7",
            "id": "rtb-0085e349c05dfc2c7",
            "owner_id": "850286438394",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "natsvpc-private"
            },
            "tags_all": {
              "Name": "natsvpc-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:route-table/rtb-08ea1f4239266da56",
            "id": "rtb-08ea1f4239266da56",
            "owner_id": "850286438394",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "natsvpc-public"
            },
            "tags_all": {
              "Name": "natsvpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a9fc48f8c5c9d9e",
            "route_table_id": "rtb-0085e349c05dfc2c7",
            "subnet_id": "subnet-02e2df5571c0df3ac"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_route_table.private",
            "module.vpc.module.natsvpc.aws_subnet.private",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-030321945591daa8f",
            "route_table_id": "rtb-0085e349c05dfc2c7",
            "subnet_id": "subnet-0506654fc53e4d91c"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_route_table.private",
            "module.vpc.module.natsvpc.aws_subnet.private",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03215a052caeece8b",
            "route_table_id": "rtb-08ea1f4239266da56",
            "subnet_id": "subnet-0445b20d458057697"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_route_table.public",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6516817729464cb",
            "route_table_id": "rtb-08ea1f4239266da56",
            "subnet_id": "subnet-0ba49c78b9679ebb0"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_route_table.public",
            "module.vpc.module.natsvpc.aws_subnet.public",
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:subnet/subnet-02e2df5571c0df3ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e2df5571c0df3ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850286438394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natsvpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "natsvpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:subnet/subnet-0506654fc53e4d91c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0506654fc53e4d91c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850286438394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natsvpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "natsvpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:subnet/subnet-0445b20d458057697",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0445b20d458057697",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850286438394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natsvpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "natsvpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:subnet/subnet-0ba49c78b9679ebb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba49c78b9679ebb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "850286438394",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "natsvpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "natsvpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-07715e836d8ba496b"
          },
          "dependencies": [
            "module.vpc.module.natsvpc.aws_vpc.this",
            "module.vpc.module.natsvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.natsvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:850286438394:vpc/vpc-07715e836d8ba496b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0696f6849fb2e33d8",
            "default_route_table_id": "rtb-0ddeb68feebc460e2",
            "default_security_group_id": "sg-003b3e63652324a98",
            "dhcp_options_id": "dopt-014ad11494c86f7fe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07715e836d8ba496b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ddeb68feebc460e2",
            "owner_id": "850286438394",
            "tags": {
              "Name": "natsvpc"
            },
            "tags_all": {
              "Name": "natsvpc"
            }
          }
        }
      ]
    }
  ]
}